--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -26,5 +26,38 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest tests/
+          python -m pytest tests/
       
+      - name : run data processing script
+        run: |
+          python src/data/run_processing.py \
+           --input data/raw/house_data.csv  \
+           --output data/processed/cleaned_house_data.csv
+      - name : Do feature engineering
+        run: |
+          python src/features/engineer.py \
+            --input data/processed/cleaned_house_data.csv \
+            --output data/processed/featured_house_data.csv \
+            --preprocessor models/trained/preprocessor.pkl
+      
+      - name : Start MLflow server
+        run: |
+          docker pull ghcr.io/mlflow/mlflow
+          docker run -d -p 5555:5000 \
+          --name mlflow-server --host 0.0.0.0 \
+          --backend-store-uri sqlite:///mlflow.db \
+          --default-artifact-root /tmp/mlruns
+
+      - name : Train model
+        run: |
+          python src/models/train_model.py \
+            --config configs/model_config.yaml \
+            --data data/processed/featured_house_data.csv \
+            --models-dir models  \
+            --mlflow-tracking-uri http://localhost:5555
+
+      - name : Cleaning up MLflow server
+        run: |
+          docker stop mlflow-server
+          docker rm mlflow-server
+          docker rmi ghcr.io/mlflow/mlflow
