--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -36,13 +36,20 @@ jobs:
             --output data/processed/featured_house_data.csv \
             --preprocessor models/trained/preprocessor.pkl
       
-      - name : Start MLflow server
+      - name: Start MLflow server
         run: |
           docker pull ghcr.io/mlflow/mlflow
-          docker run -d -p 5555:5000 \
-          --name mlflow-server --host 0.0.0.0 \
-          --backend-store-uri sqlite:///mlflow.db \
-          --default-artifact-root /tmp/mlruns
+
+          docker run -d \
+            -p 5555:5000 \
+            --name mlflow-server \
+            ghcr.io/mlflow/mlflow \
+            mlflow server \
+            --host 0.0.0.0 \
+            --port 5000 \
+            --backend-store-uri sqlite:///mlflow.db \
+            --default-artifact-root /tmp/mlruns
+
 
       - name : Train model
         run: |
